--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@ get-token.py
 functions/post-data.py
 functions/whu-lib-seat-backup.py
 functions/whu-lib-seat-origin.py
+README.html
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/whu-lib-seat.iml
+.idea/workspace.xml
+.idea/vcs.xml
+.idea/vcs.xml
+.idea/vcs.xml
+.idea/vcs.xml
