定时预约；预约成功自动发送邮件；修改README.md

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,14 @@ README.html
 .idea/vcs.xml
 .idea/vcs.xml
 .idea/vcs.xml
+.idea/markdown-navigator.xml
+.idea/markdown-navigator/profiles_settings.xml
+.old/get-time.py
+.old/get-time.py
+.old/post-data.py
+.old/whu-lib-seat-backup.py
+.old/whu-lib-seat-origin.py
+.config.json
+.old/get-time.py
+.old/post-data.py
+send-mail.py
