--- a/config.json
+++ b/config.json
@@ -6,12 +6,12 @@
   "date_flag": "tomorrow",
   "schedule_flag": "1",
   "schedule_time": ["22", "15", "1"],
-  "seats": ["9388", "9392", "9400"],
+  "seats": ["9400"],
   "more_seats": ["9388", "9506", "9392", "9400", "9413", "9419", "9411", "9409", "9436", "9430", "9432", "9442", "9463",
     "9507", "9461", "9459", "9451", "9480", "9509", "9508", "9484", "9505", "9497", "9503", "9495", "9501", "9493"],
   "send_mail_flag": "1",
-  "mail_address_from": "fajian@mailbox.com",
+  "mail_address_from": "fajianren@mailbox.com",
   "mail_password": "password",
-  "mail_address_to": "shoujian@mailbox.com",
+  "mail_address_to": "shoujianren@mailbox.com",
   "mail_smtp_server": "xxxx.xxxx.xxxx"
 }
