调整模块引用层次；调整GUI
main.py改为run.py；从gui.py引用run.py；实现“记住密码”和“发送邮件”的checkButton；

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "password": "15xxxx",
   "startTime": "800",
   "endTime": "990",
-  "date_flag": "tomorrow",
+  "date_flag": "today",
   "schedule_flag": "1",
   "schedule_time": ["22", "15", "1"],
   "seats": ["9400"],
